--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
   "author": "webskyus",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "css-mqpacker": "^7.0.0",
     "css-url-relative-plugin": "^1.0.0",
     "cssnano": "^4.1.10",
+    "csv-loader": "^3.0.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -50,10 +55,14 @@
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.7",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-livereload-plugin": "^2.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.10.4",
+    "jquery": "^3.5.1",
+    "xml-loader": "^1.2.1"
+  }
 }
